--- a/gb/23/7/24/n14040943.md
+++ b/gb/23/7/24/n14040943.md
@@ -1,77 +1,77 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>组图：单亲母亲为女儿减重175磅 判若两人</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14040946-Kimberly-Nestorick-mom-1200x720-600x400.jpg" />
 <h6>减肥前的金伯利·内斯特里克（Kimberly Nestorick）。(金伯利?内斯特里克提供）
 </h6>
 <hr>
-	<p>【大纪元2023年07月24日讯】（英文大纪元记者Louise Chambers报导／艾琛编译）一位从小就与肥胖症作斗争的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8D%95%E4%BA%B2%E6%AF%8D%E4%BA%B2.md#1">单亲母亲</a>，为了她4岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%B3%E5%84%BF.md#1">女儿</a>，彻底改变了自己不健康的生活习惯，成为了一位更好的母亲。在减掉175磅（79.3千克）的体重后，她还分享了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5.md#1">减肥</a>过程中不为人知的内心挣扎。</p>
-<p>27岁的金伯利?内斯特里克（Kimberly Nestorick）来自宾夕法尼亚州东北部，是一位零售助理、内容创作者和4岁的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A5%B3%E5%84%BF.md#1">女儿</a>埃弗利（Everly）的妈妈。在多次<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%87%8F%E8%82%A5.md#1">减肥</a>失败后，她于2016年选择了垂直袖状胃切除术（vertical sleeve gastrectomy surgery），并在一年内减掉了超过100磅（45公斤）。但后来她怀孕生子后，体重又恢复到以前的水平，而且比之前还要重。</p>
+	<p>【大纪元2023年07月24日讯】（英文大纪元记者Louise Chambers报导／艾琛编译）一位从小就与肥胖症作斗争的单亲母亲，为了她4岁的女儿，彻底改变了自己不健康的生活习惯，成为了一位更好的母亲。在减掉175磅（79.3千克）的体重后，她还分享了减肥过程中不为人知的内心挣扎。</p>
+<p>27岁的金伯利?内斯特里克（Kimberly Nestorick）来自宾夕法尼亚州东北部，是一位零售助理、内容创作者和4岁的女儿埃弗利（Everly）的妈妈。在多次减肥失败后，她于2016年选择了垂直袖状胃切除术（vertical sleeve gastrectomy surgery），并在一年内减掉了超过100磅（45公斤）。但后来她怀孕生子后，体重又恢复到以前的水平，而且比之前还要重。</p>
 <p>内斯特里克告诉《大纪元时报》，“我认为体重的快速增加是由多种因素造成的。我当时正处于一段不健康的关系中，这段关系让我精神疲惫、精疲力竭，我一心只想照顾好其他人，却忽略了自己，后来又发生了新冠病毒疫情，全球各地都处于封锁状态。”</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373117-kimberly-nestorick-weight-loss-journey-1200x1213.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373117-kimberly-nestorick-weight-loss-journey-1200x1213.jpg" width="450" b="455" /></a><figcaption class="wp-caption-text">减肥前后的金伯利·内斯特里克。(金伯利?内斯特里克提供）</figcaption></figure>
-<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/19/id5408172-Kimberly-Nestorick-and-daughter-1200x629.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/19/id5408172-Kimberly-Nestorick-and-daughter-1200x629.jpg" width="601" b="315" /></a><figcaption class="wp-caption-text">金伯利?内斯特里克说，做女儿的母亲是“最棒的礼物”。(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373117-kimberly-nestorick-weight-loss-journey-1200x1213.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373117-kimberly-nestorick-weight-loss-journey-1200x1213.jpg" width="450" b="455" /></a><figcaption class="wp-caption-text">减肥前后的金伯利·内斯特里克。(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 601px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/19/id5408172-Kimberly-Nestorick-and-daughter-1200x629.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/19/id5408172-Kimberly-Nestorick-and-daughter-1200x629.jpg" width="601" b="315" /></a><figcaption class="wp-caption-text">金伯利?内斯特里克说，做女儿的母亲是“最棒的礼物”。(金伯利?内斯特里克提供）</figcaption></figure>
 <h2>巨大的遗憾</h2>
 <p>在最低谷的时候，内斯特里克根本不运动。她和女儿呆在家里，在推趣（Twitch）上播放流媒体内容，一天最多叫三次外卖。她最喜欢点的是五份辣鸡肉卷配法式炸薯条（Cajun fries）、米饭、松饼和甜茶。</p>
 <p>她透露说，“我的咖啡瘾也影响了我的卡路里摄入量。我每天都会喝一大杯冰咖啡或拿铁（latte），里面有香精、甜味剂和奶油。卡路里很快就超量了。”</p>
 <p>内斯特里克无法带着她蹒跚学步的孩子到处跑和玩耍，更不用说长时间抱着她了。她避免外出，因为她觉得自己太自卑了。</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5405113-Kimberly-Nestorick-1200x1200.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5405113-Kimberly-Nestorick-1200x1200.jpeg" width="450" b="450" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5405113-Kimberly-Nestorick-1200x1200.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5405113-Kimberly-Nestorick-1200x1200.jpeg" width="450" b="450" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
 <p>内斯特里克分享说，“在女儿出生后的头三年里，我甚至不想和我女儿一起照相。这是我的一大遗憾，所以如果我能给大家提供建议的话，那就是无论你对自己或自己的外表感觉有多糟糕，都要拍一些照片。</p>
 <p>2021年7月8日，当内斯特里克同意与女儿在宾夕法尼亚州吉姆索普火车站（the Jim Thorpe train station）合影时，一切都发生了变化。她的母亲在脸书（Facebook）上上传了这张照片。</p>
 <p>内斯特里克透露说，“我非常羞愧，甚至都认不出自己了，我让母亲把照片删掉。那时我就知道，如果我还想抚养和照顾我的小女儿，就必须开始认真地改变我的生活方式。</p>
 <h2>爱上健康烹饪</h2>
 <p>第二天，内斯特里克勇敢地面对体重秤。这位身高5英尺的妈妈体重已经达到了308磅（140公斤）。她说，“我知道自己的体重一直在增加，只是没有意识到自己究竟有多重。</p>
 <p>她立即做出了重大改变，把每天的外卖换成自己做饭，并发现了对烹饪的热爱。她知道新的饮食习惯必须是现实的、可持续的，但“学习如何为自己的身体而不是头脑进食”的确是一项挑战。内斯特里克称，“我热爱美食。但真正了解我的身体到底需要什么对我来说很难。”</p>
-<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373116-kimberly-nestorick-wearing-the-same-shirt-after-losing-weight-1200x949.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373116-kimberly-nestorick-wearing-the-same-shirt-after-losing-weight-1200x949.jpg" width="600" b="475" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373108-kimberly-after-losing-weight-1200x1379.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373108-kimberly-after-losing-weight-1200x1379.jpg" width="450" b="517" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373116-kimberly-nestorick-wearing-the-same-shirt-after-losing-weight-1200x949.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373116-kimberly-nestorick-wearing-the-same-shirt-after-losing-weight-1200x949.jpg" width="600" b="475" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373108-kimberly-after-losing-weight-1200x1379.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373108-kimberly-after-losing-weight-1200x1379.jpg" width="450" b="517" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
 <p>这位母亲与一位营养学家合作了三个月，学会了追踪自己的卡路里摄入量，这是一个“费时又烦人”的过程，但她确实通过这个过程，真正地了解了自己所需的食物，她甚至通过改用零卡路里的瘦糖浆和限制奶油的用量来改变自己的咖啡配制。</p>
 <p>她称，“我仍然每天都在学习。至于锻炼，我主要做有氧运动。我喜欢椭圆机（elliptical或交叉训练机），我觉得它有治疗作用。我把阻力调到10级，然后打开Hulu上的节目，锻炼一个小时。</p>
 <h2>坚持不懈的减肥之旅</h2>
 <p>在减肥过程中，内斯特里克得到了家人和朋友的支持，她还向内容创作者寻求建议。她曾自惭形秽，从未想过自己会成为一名有影响力的人。直到她减重超过100磅（45公斤），她才开始在自己的社交媒体上分享自己的减肥之旅。</p>
 <p>内斯特里克分享说，“我以为我会像以前一样失败，但我很庆幸自己没有重蹈覆彻。每天都是一场心理战。要想取得成功，心理健康是你必须努力的方向。”</p>
 <p>“老实说，在我的人生旅途中，大部分时间我都没有保持动力，动力时有时无。但这一次我坚持不懈；我不断提醒自己我的目标。我知道实现自己目标的唯一方法就是保持自律。”</p>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373119-weightloss-journey-kimberly-nestorick-1200x1243.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373119-weightloss-journey-kimberly-nestorick-1200x1243.jpg" width="450" b="466" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
-<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404964-Kimberly-Nestorick3-1200x1206.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404964-Kimberly-Nestorick3-1200x1206.jpeg" width="450" b="452" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373119-weightloss-journey-kimberly-nestorick-1200x1243.jpg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/04/id5373119-weightloss-journey-kimberly-nestorick-1200x1243.jpg" width="450" b="466" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 450px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404964-Kimberly-Nestorick3-1200x1206.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404964-Kimberly-Nestorick3-1200x1206.jpeg" width="450" b="452" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
 <h2>做一位健康母亲</h2>
 <p>在撰写本文时，内斯特里克女士体重为133磅（60公斤）。她的目标是再减5磅，以达到健康的体重指数（Body Mass Index，简称，BMI），并坚持迄今为止对她有效的“珍惜每一天”的座右铭。她称，“我只能做好当日，这就是我一直坚持做的。”“我只能做好当日，这就是我一直坚持做的。”“我只能做好当日，这就是我一直坚持做的。”</p>
 <p>内斯特里克每天坚持走10,000步，对自己的食物选择也非常谨慎，不需要再追踪卡路里。但是，大规模减肥也有其不足，造成内斯托瑞克身上留下了大量多余的皮肤，她仍然觉得自己的外貌受到质疑。</p>
 <p>她说，“我仍然觉得自己活在308磅（140公斤）的瘪瘪的身体里。一觉醒来，在镜子里看到的仍然是减肥前的那个我，这让我很难受，而我为了减肥已经努力了两年。我想这就是目前阻碍我达到目标体重的原因。”</p>
-<figure style="width: 449px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404963-Kimberly-Nestorick2-1200x1200.jpeg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404963-Kimberly-Nestorick2-1200x1200.jpeg" width="449" b="449" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
+<figure style="width: 449px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404963-Kimberly-Nestorick2-1200x1200.jpeg" target="_blank" rel="noreferrer noopener"> <img decoding="async" class="" src="https://img.theepochtimes.com/assets/uploads/2023/07/18/id5404963-Kimberly-Nestorick2-1200x1200.jpeg" width="449" b="449" /></a><figcaption class="wp-caption-text">(金伯利?内斯特里克提供）</figcaption></figure>
 <p>内斯特里克仅腹部就有大约10磅（4.5公斤）的松弛皮肤，她正计划筹集资金为皮肤切除手术做准备，并已设立了一个筹款活动。她称，数百名善良的网友已慷慨捐款帮助她实现目标。</p>
 <p>内斯特里克说。“说真的，我随时都愿意接受除去多余皮肤的手术，以前的我不健康、自卑、不快乐。”</p>
 <p>自从战胜了一生中不良的习惯后，这位单亲妈妈自豪地称自己是一位健康的母亲。内斯特里克分享说，“我可以带着女儿到处跑，背着她也不会大汗淋漓，爬台阶也不再气喘吁吁，做家务也不会筋疲力尽。我可以穿我真正喜欢并讨人喜欢的衣服。”</p>
 <p>责任编辑：高静#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/29/n13984676.md#1">8个月甩30公斤！日本名教练：避开5点减肥不复胖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/24/n14022105.md#1">5年减30公斤甩掉脂肪肝 医师分享“慢减肥”好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031773.md#1">这么吃能减肥！四种食物中的营养素能燃烧脂肪</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100099.md#1">乐善好施 俄亥俄州已故夫妇捐博物馆1800万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/29/n13984676.md#1">8个月甩30公斤！日本名教练：避开5点减肥不复胖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/24/n14022105.md#1">5年减30公斤甩掉脂肪肝 医师分享“慢减肥”好处</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/7/10/n14031773.md#1">这么吃能减肥！四种食物中的营养素能燃烧脂肪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303627.md#1">25岁妻子早上5点为丈夫做饭 分享传统家庭观</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/5/18/n10405198.md#1" target="_blank">蔡霞：文革是一场每个人命运的浩劫</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/19/n9864143.md#1" target="_blank">毛泽东诗词中的抄袭现象</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">修炼“真善忍”化解家庭恩怨的德国人</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/12/n14093639.md#1">三国徐庶修炼成仙的记载</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096597.md#1">【未解之谜】预言中的以巴战争</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14096835.md#1">皇帝小故事：旅舍女老板腹中胎儿预言天子到！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/16/n14096041.md#1">扎堆成仙？九月初九重阳节原来不是老人节！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/18/n14097506.md#1">【古道人生】会算命的道士原来是只大蝎子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101851.md#1">【晚间新闻】传许家印供出9正国级高官 涉1.6万亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/24/n14101852.md#1">【全球新闻】早知以哈之战？ 中共军舰提前部署中东</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101033.md#1">【环球直击】中共查富士康 台湾警告莫干预选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100431.md#1">【菁英论坛】传许家印供出9名正国级官员</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/17/n14097264.md#1">专家：习近平高调会普京 但不敢真上俄战车</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100668.md#1">中国女网红咆哮着支持哈马斯 引发国际关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100816.md#1">传杨颖出售北京5亿豪宅 疑陷舆论风波拟跑路</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100799.md#1">遭封杀逾两年 赵薇被爆缺席家公葬礼 引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/23/n14101141.md#1">汪峰章子怡结束8年婚姻 发声明证实离婚</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100281.md#1">放弃当网红转型演员 苏滢花18年敲响金钟</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/21/n14100331.md#1">蔡淑臻演“小刘”医生 荣获金钟58最佳女主角</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/9/n14091082.md#1">50岁后的养生哲学 6类食物一定要多吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/22/n14100569.md#1">为什么年纪越大越容易感觉冷？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/15/n14095745.md#1">吃蔬果别错过槲皮素！抗感染抗病毒不输抗生素</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/11/n14092575.md#1">如何预防改善失智症？中医1药茶、3穴位让大脑回春</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/10/20/n14099588.md#1">到托斯卡纳必尝的10道经典美食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307633.md#1">【新闻五人行】官员玩“掼蛋” 中南海也怕？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307724.md#1">【未解之谜】神农架野人之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307546.md#1">【中国禁闻】中国爆盗卖遗体黑色产业链</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307570.md#1">黄晓明贺表妹陈梦奥运夺冠 却遭友人诡异吐槽</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/23/n14296647.md#1">知名医院主治医师：五种癌症可早期预防</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/24/n14040943.htm">组图：单亲母亲为女儿减重175磅 判若两人</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/24/n14040943.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/24/n14040943.htm">组图：单亲母亲为女儿减重175磅 判若两人</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/24/n14040943.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
